# CPP-Social-Media-Backend

./: CMakeLists.txt  README.markdown  README.md
config/: config.env
include/: db.hpp
include/controllers/: notification_controller.hpp  tweet_controller.hpp  user_controller.hpp
include/middlewares/: auth_middleware.hpp
include/models/: notification_model.hpp  tweet_model.hpp  user_model.hpp
include/utils/: cloudinary.hpp  image_processor.hpp
src/: db.cpp  main.cpp
src/controllers/: notification_controller.cpp  tweet_controller.cpp  user_controller.cpp
src/middlewares/: auth_middleware.cpp
src/utils/: cloudinary.cpp  image_processor.cpp
